[package]
name         = "rustracer"
license      = "GPL-3.0"
version      = "1.0.1"
edition      = "2021"
rust-version = "1.64"
authors      = [
   "Andrea Rossoni <andrea dot ros.21 at e.email>",
   "Paolo Azzini <paolo dot azzini1 at gmail.com>"
]
readme        = "README.md"
repository    = "https://github.com/andros21/rustracer"
homepage      = "https://github.com/andros21/rustracer"
documentation = "https://andros21.github.io/rustracer/docs"
categories    = ["command-line-utilities"]
description   = "a multi-threaded raytracer in pure rust"
exclude       = [
   ".github/*",
   ".gitignore",
   "examples/*",
   "install.sh",
   "makefile",
]
keywords      = [
   "cli",
   "image",
   "raytracer",
   "raytracing",
   "thread"
]

[[bin]]
name = "rustracer"
path = "src/main.rs"

[dependencies]
thiserror     = "1.0.37"
byteorder     = "1.4.3"
rayon         = "1.5.3"
colored       = "2.0.0"
clap_complete = "3.2.3"

[dependencies.image]
version          = "0.24.4"
default-features = false
features         = ["farbfeld", "png"]

[dependencies.clap]
version          = "4.0.7"
default-features = true
features         = ["wrap_help"]
