[package]
name = "rustracer"
license = "GPL-3.0"
version = "1.0.4"
edition = "2021"
authors = [
   "Andrea Rossoni <andrea dot ros.21 at e.email>",
   "Paolo Azzini <paolo dot azzini1 at gmail.com>",
]
readme = "README.md"
repository = "https://github.com/andros21/rustracer"
homepage = "https://github.com/andros21/rustracer"
documentation = "https://andros21.github.io/rustracer/docs"
categories = ["command-line-utilities"]
description = "a multi-threaded raytracer in pure rust"
exclude = [".github/*", ".gitignore", "examples/*", "install.sh", "makefile"]
keywords = ["cli", "image", "raytracer", "raytracing", "thread"]

[[bin]]
name = "rustracer"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.11"
byteorder = "1.5.0"
rayon = "1.10.0"
colored = "3.0.0"
clap_complete = "4.5.44"

[dependencies.image]
version = "0.24.9"
default-features = false
features = ["farbfeld", "png"]

[dependencies.clap]
version = "4.5.27"
default-features = true
features = ["wrap_help"]
